tests/scripts/type_errors/missing_arguments.roto
function bar(a: u32) -> u32 {
	a
}

function foo() {
	bar()
}
